# AI4Sec

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.en.md  README.md  docker-compose.yml  ieee_result.json  test_ai_connection.py  test_spring.py
DEV_DOC/: PLAN.md  (+3 more)
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py  rate_limit.py
backend/app/api/: admin.py  library.py  papers.py  runs.py  system.py
backend/app/db/: database.py  schema.sql
backend/app/models/: paper_ir.py  schemas.py  sphere_models.py
backend/app/services/: citation_graph.py  citation_validator.py  corpus_qa.py  dify_client.py  evidence_extractor.py  llm_service.py  mineru_adapter.py  paper_downloader.py  paper_ir.py  qa_retrieval.py  sphere_scorer.py
backend/app/workflows/: intent_classifier.py  lens_subgraph.py  main_graph.py  progress.py  qa_subgraph.py  snap_subgraph.py  sphere_subgraph.py  state.py  translate.py
backend/data/: app.db
backend/scripts/: clear_rank_cache.py
backend/tests/: test_corpus_qa.py  test_dify_client.py  test_mineru_timeout.py  test_publication_rank_llm_config.py  test_qa_retrieval.py  test_qa_subgraph.py  test_rank_cache_cleanup.py  test_run_owner_isolation.py
paper_search/: .env  .env.example  README.md  pyproject.toml
paper_search/examples/: basic.py
paper_search/paper_search/: __init__.py  __main__.py  config.py  debug.py  llm.py  logger.py  models.py  pdf.py  search.py  utils.py
paper_search/tests/: __init__.py  test_platforms.py  test_search_papers.py
(+99 files in other folders)
